--- a/config.example.env
+++ b/config.example.env
@@ -1,2 +1,8 @@
-SAFESKY_API_URL=""https://public-api.safesky.app/v1/beacons""
-SAFESKY_API_KEY="string"
+SAFESKY_UPDATE_INTERVAL_MS="4000"
+SAFESKY_API_URL="https://public-api.safesky.app/v1/beacons"
+SAFESKY_API_KEY="foo-bar-baz"
+SAFESKY_MAX_ALT="1829"
+SAFESKY_BB_SW_LAT="47.739323"
+SAFESKY_BB_SW_LON="11.985945"
+SAFESKY_BB_NE_LAT="51.079371"
+SAFESKY_BB_NE_LON="22.585201"
