--- a/config.example.env
+++ b/config.example.env
@@ -6,3 +6,5 @@ SAFESKY_BB_SW_LAT="47.739323"
 SAFESKY_BB_SW_LON="11.985945"
 SAFESKY_BB_NE_LAT="51.079371"
 SAFESKY_BB_NE_LON="22.585201"
+WEB_SSL_PATH_CRT="localhost.crt"
+WEB_SSL_PATH_KEY="localhost.key"
